# shape.math

./: README.md  helper.hh  matrix.hh  vector.hh
simd/: sse.hh
test/: CMakeLists.txt  matrix.cc  vector.cc
